@@ -1,22 +1,32 @@
 import QtQuick 2.2
 import QtQuick.Controls 1.2
 
-// This type needs an item called frame in which the shortcut strings are saved
-// as well as a SystemPalette called systemPalette.
-// Usage:
-// The shortcuts must be defined in an item called "frame". Alternatively,
-// change "frame" here to something different.
-//  - shortcut: Set to the name of the shortcut variable (e.g. "shortcut_left")
-//  - valid: Set to false if the shortcut is not recognised by QML
-//  - unique: Set to false if another ShortcutTextField has the same text
-TextField {
-    property string shortcut: ""
+Rectangle {
+    width: childrenRect.width
+    height: childrenRect.height
+    color: "transparent"
     property bool valid: true
     property bool unique: true
-    text: frame[shortcut]
-    // FIXME: use colors from the system's theme
-    //textColor: (! valid) ? 'red' : (! unique) ? 'orange' : 'black'
-    textColor: (! valid) ? 'red' :
-               (! unique) ? 'orange' :
-               systemPalette.text
+    property int arrayIndex: 0
+    property string target: ''
+    property string shortcut: frame[target]
+    property string oldShortcut: frame[target]
+
+    TextField {
+        id: textField
+        text: parent.shortcut
+        onEditingFinished: {
+            shortcutSettings.changeShortcut(text, oldShortcut, arrayIndex)
+        }
+    }
+
+    Icon {
+        anchors.left: textField.right
+        anchors.leftMargin: 3
+        iconName: (!valid) ? 'dialog-error' :
+                  (!unique) ? 'dialog-warning' : 'empty'
+        tooltip: (!valid) ? 'This is not a valid shortcut!' :
+                 (!unique) ? 'You have already assigned this shortcut to another element.' :
+                 ''
+    }
 }
